--- a/PiniT/Views/Restaurants/ManagerIndex.cshtml
+++ b/PiniT/Views/Restaurants/ManagerIndex.cshtml
@@ -18,10 +18,8 @@
 
 <div class="row">
     <div class="col"></div>
-    <div class="bg-white col-8 text-center shadow-lg text-light p-0" id="card-back">
+    <div class="bg-white col-8 text-center shadow-lg text-light p-0 font-italic" id="card-back">
         <h4 class="font-italic p-2 bg-dark">Restaurant Info</h4>
-        <hr class="m-0"/>
-
 
         <dl class="col dl-horizontal mx-auto">
             <dt>
