--- a/PiniT/Views/Images/AddImage.cshtml
+++ b/PiniT/Views/Images/AddImage.cshtml
@@ -3,8 +3,15 @@
 @{
     ViewBag.Title = "AddImage";
 }
+<style>
+    body {
+        background-image: url("/Content/Images/background.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
 
-<h2 class="a mx-auto text-center">Add an Image</h2>
+<h2 class="a mx-auto text-center text-white font-weight-bold">Add an Image</h2>
 
 
 @using (Html.BeginForm("AddImage", "Images", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -32,7 +39,7 @@
             <div class="form-group">
                 <div class="col-md-offset-4 btn-group">
                     <input type="submit" value="Add Image" class="btn btn-success" />
-                    @Html.ActionLink("Back", "ManagerIndex","Restaurants", null, new { @class = "btn btn-dark" })
+                    @Html.ActionLink("Back", "ManagerIndex", "Restaurants", null, new { @class = "btn btn-dark" })
                 </div>
             </div>
         </div>
