--- a/PiniT/Views/Images/SetProfileImage.cshtml
+++ b/PiniT/Views/Images/SetProfileImage.cshtml
@@ -6,10 +6,14 @@
         width: 50%;
     }
 
-    
+    body {
+        background-image: url("/Content/Images/background.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+    }
 </style>
 
-<h2 class="a text-center mx-auto mt-4 mb-4">Set Profile Image</h2>
+<h2 class="a text-center mx-auto mt-4 mb-4 font-weight-bold text-white">Set Profile Image</h2>
 <hr />
 <div class="row border border-info bg-light">
     @foreach (var img in Model)
