--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -48,10 +48,9 @@
         </div>
     </div>
 
-    <div id="animate-area" class="homeboxb">
+    <div id="" class="homeboxb">
       
-       
-        @*<div class="row text-center mx-auto">
+        <div class="row text-center mx-auto">
             <div class="col-md-4">
                 <h5>
                     Pizza
@@ -80,5 +79,5 @@
                 <h5>Sushi</h5>
                 <img class="roundimages" src="~/Content/images/sushi.jpg" />
             </div>
-        </div>*@
+        </div>
     </div>
