--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 </h5>
                 @if (item.Images.FirstOrDefault(x => x.isProfileImage) == null)
                 {
-                    <img class="roundimage" src="~/Content/images/labellamafia.jpg" />
+                    <img class="roundimage" src="~/Content/Images/logoS.png" />
                 }
                 else
                 {
